[gd_scene load_steps=15 format=2]

[ext_resource path="res://Asset/Home/Latar Game Basic.png" type="Texture" id=1]
[ext_resource path="res://Asset/Body Puzzle/boy/Tulisan 13.png" type="Texture" id=2]
[ext_resource path="res://Scene/GAme/BodyPuzze/piece/stage1/rambut.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/GAme/BodyPuzze/bodyPuzzle.gd" type="Script" id=4]
[ext_resource path="res://Asset/Body Puzzle/boy/Kepala.png" type="Texture" id=5]
[ext_resource path="res://Scene/GAme/BodyPuzze/piece/stage1/mulut.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/GAme/BodyPuzze/piece/stage1/mata.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scene/GAme/BodyPuzze/piece/stage1/alis.tscn" type="PackedScene" id=8]
[ext_resource path="res://Asset/Body Puzzle/boy/Mulut _ Hidung.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.411765, 0.403922, 0.403922, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.792465, 0.806917, 0.863281, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.733333, 0.596078, 0.596078, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 72.5, 18.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 64.5, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 61, 10 )

[node name="bodyPuzzle" type="Node2D"]
script = ExtResource( 4 )

[node name="body" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="body"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="body"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="body"]
margin_left = 168.0
margin_top = 256.0
margin_right = 523.0
margin_bottom = 613.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="karakter" type="TextureRect" parent="body/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.0
margin_top = -165.0
margin_right = 165.0
margin_bottom = 165.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="karakter2" type="TextureRect" parent="body/Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 144.0
margin_top = 224.0
margin_right = -139.0
margin_bottom = -85.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="body"]
margin_left = 776.0
margin_top = 288.0
margin_right = 1043.0
margin_bottom = 509.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="bagian" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="bagian"]
position = Vector2( 40, 112 )
color = Color( 0.678431, 0.32549, 0.32549, 1 )
polygon = PoolVector2Array( 584, 280, 656, 280, 656, 328, 584, 328, 584, 352, 528, 304, 584, 256 )

[node name="rambut" type="Area2D" parent="bagian"]
position = Vector2( 336, 296 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bagian/rambut"]
shape = SubResource( 2 )

[node name="alis" type="Area2D" parent="bagian"]
position = Vector2( 344, 400 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="bagian/alis"]
position = Vector2( 0, 8 )
shape = SubResource( 4 )

[node name="mata" type="Area2D" parent="bagian"]
position = Vector2( 296, 440 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bagian/mata"]
position = Vector2( 51, 0 )
shape = SubResource( 5 )

[node name="mulut" type="Area2D" parent="bagian"]
position = Vector2( 344, 488 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bagian/mulut"]
position = Vector2( 0, 10.25 )
shape = SubResource( 2 )

[node name="alis" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( 896, 392 )

[node name="rambut" parent="." instance=ExtResource( 3 )]
position = Vector2( 912, 400 )

[node name="mata2" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 912, 392 )

[node name="mulut" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 912, 400 )

[connection signal="body_entered" from="bagian/rambut" to="." method="_on_rambut_body_entered"]
[connection signal="body_exited" from="bagian/rambut" to="." method="_on_rambut_body_exited"]
[connection signal="body_entered" from="bagian/alis" to="." method="_on_alis_body_entered"]
[connection signal="body_exited" from="bagian/alis" to="." method="_on_alis_body_exited"]
[connection signal="body_entered" from="bagian/mata" to="." method="_on_mata_body_entered"]
[connection signal="body_exited" from="bagian/mata" to="." method="_on_mata_body_exited"]
[connection signal="body_entered" from="bagian/mulut" to="." method="_on_mulut_body_entered"]
[connection signal="body_exited" from="bagian/mulut" to="." method="_on_mulut_body_exited"]
[connection signal="lepas" from="alis" to="." method="_on_alis_lepas"]
[connection signal="lepas" from="rambut" to="." method="_on_rambut_lepas"]
[connection signal="lepas" from="mata2" to="." method="_on_mata2_lepas"]
[connection signal="lepas" from="mulut" to="." method="_on_mulut_lepas"]
